--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Magaz</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/1.6.1/x3dom.css" />
+    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
     <script src="https://www.x3dom.org/download/1.6.1/x3dom-full.js"></script>
   </head>
   <body>
