--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script>
 </head>
 	<body>
-	  <X3D style="left:0px; top:0px; width:100%; height:100%; border: none;">
+	  <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom" width = "1000" height = "1000">
 		<Scene>
 		  
 		
