--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<Scene>
 		  
 		
-		  
+				<!--Тест-->
 				  <!--Камеры в группе-->
 				  <Viewpoint description="Начальный вид" position="0 16 40"></Viewpoint>
 				  <Viewpoint description="Вид камера 1" position="-20 28 -20" orientation="0.2 1 0.3 -2.36"></Viewpoint>
