--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <transform translation="-23 18 -173">
         <Shape>
           <Appearance>
-            <ImageTexture url="Aks.JPG" repeatT="false"></ImageTexture>
+            <ImageTexture url="Aks.jpg" repeatT="false"></ImageTexture>
           </Appearance>
           <Box size="6 8 1"></Box>
         </Shape>
@@ -297,7 +297,7 @@
       <transform translation="-43 26 -173.5">
         <Shape>
           <Appearance>
-            <ImageTexture url="Serg.JPG" repeatT="false"></ImageTexture>
+            <ImageTexture url="Serg.jpg" repeatT="false"></ImageTexture>
           </Appearance>
           <Box size="6 5 0.1"></Box>
         </Shape>
@@ -307,7 +307,7 @@
      <transform DEF="BD" translation="1 27 -173.5">
         <Shape>
           <Appearance>
-            <ImageTexture url="bd1.JPG" repeatT="false"></ImageTexture>
+            <ImageTexture url="bd1.jpg" repeatT="false"></ImageTexture>
           </Appearance>
           <Box size="28 16 0.1"></Box>
         </Shape>
@@ -325,7 +325,7 @@
       <transform DEF="icg" translation="1 27 -178.5">
         <Shape>
           <Appearance>
-            <ImageTexture url="icg1.JPG" repeatT="false"></ImageTexture>
+            <ImageTexture url="icg1.jpg" repeatT="false"></ImageTexture>
           </Appearance>
           <Box size="28 16 0.1"></Box>
         </Shape>
@@ -579,7 +579,7 @@
         <transform  translation="0 0 0"> 
         <shape> 
           <appearance> 
-            <ImageTexture url="Cher.JPG" repeatT="false"></ImageTexture>  
+            <ImageTexture url="Cher.jpg" repeatT="false"></ImageTexture>  
           </appearance> 
           <sphere radius = "5"></sphere> 
         </shape> 
@@ -610,7 +610,7 @@
         <transform DEF="lete" translation="0 0 -50"> 
         <shape> 
           <appearance> 
-            <ImageTexture url="Voe.JPG" repeatT="false"></ImageTexture>  
+            <ImageTexture url="Voe.jpg" repeatT="false"></ImageTexture>  
           </appearance> 
           <sphere radius = ""></sphere> 
         </shape> 
