--- a/index.html
+++ b/index.html
@@ -1,13 +1,135 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 4</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+<html lang="ru"> 
+<head> 
+<meta charset="utf-8" /> 
+<title>Лаба 2</title> 
+<link rel="stylesheet" href="https://www.x3dom.org/download/dev/x3dom.css" /> 
+<script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script> 
+</head> 
+
+ <body>
+  <X3D style="left:0px; top:0px; width:100%; height:100%; border: none;">	
+<Scene>
+	<Group DEF="light">
+ <Transform DEF="podsvet1" translation="20 1 0" rotation="0 1 0 -0.785">
+ <Inline url='podsvet.x3d'>
+ </Transform>
+ <Transform DEF="podsved2" translation="20 1 50" rotation="0 1 0 -0.785">
+ 	 <Inline url='podsvet.x3d'>
+ </Transform>
+     </Group>
+ <Transform DEF="slender" translation="20 2.5 160" scale ='15 15 15' >
+     <Inline url='slender.x3d'>
+ </Transform>
+ <Transform DEF="chair" translation="10 5 100" scale='1.5 1.5 1.5' >
+     <Inline url='chair1.x3d'>
+ </Transform>
+  <!--<Background  backURL="nebo.jpg" topURL="nebo.jpg" ></Background>-->
+ <transform  rotation="0 1 1 -3.14" scale="50 50" >
+      <shape>
+       <appearance>
+        <imagetexture url="pol.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="3 3"/>
+       </appearance>
+       <plane></plane>
+      </shape>
+     </transform>
+      <transform  rotation="0 1 1 -3.14" translation="40 0 100" scale="50 50" >
+      <shape>
+       <appearance>
+        <imagetexture url="pol.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="3 3"/>
+       </appearance>
+       <plane></plane>
+      </shape>
+     </transform>
+     <transform translation="-40 0 0" rotation="0 1 0 1.57" >
+     <shape>
+     	<Appearance>
+        <imagetexture url="wall.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="3 3"/>
+      </Appearance>
+ <Extrusion crossSection="0 0 -50 0 -50 -10 40 -10 40 0 0 0"
+convex="false" spine="0 0 0 0 50 0" creaseAngle="0" solid="false">
+</Extrusion>
+     </shape>
+ </transform>
+ <transform translation="0 0 100" rotation="0 1 0 1.57" >
+     <shape>
+     	<Appearance>
+        <imagetexture url="wall.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="3 3"/>
+      </Appearance>
+ <Extrusion crossSection="0 0 -50 0 -50 -10 40 -10 40 0 0 0"
+convex="false" spine="0 0 0 0 50 0" creaseAngle="0" solid="false">
+</Extrusion>
+ </transform>
+ <transform translation="0 0 150" rotation="0 1 0 1.57" >
+ 	<transform rotation="0 1 0 1.57" >
+     <shape>
+     	<Appearance>
+        <imagetexture url="wall.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="3 3"/>
+      </Appearance>
+ <Extrusion crossSection="0 0 -50 0 -50 -10 40 -10 40 0 0 0"
+convex="false" spine="0 0 0 0 50 0" creaseAngle="0" solid="false">
+</Extrusion>
+     </shape>
+ </transform>
+ </transform>
+ <Fog color='Grey' fogType='LINEAR' visibilityRange='70'>
+ </Fog>
+  <transform translation="-39 15 20" rotation="0 0 1 1.57 " >
+  	 <transform rotation="0 1 0 1.57" scale="2 2 2">
+     	<Anchor url="https://i.gifer.com/RqB7.gif" parameter="target='_self'">
+     <shape>
+     	<Appearance>
+        <imagetexture url="monax.jpg" repeats="true" repeatt="true"  scale="true" hidechildren="true">
+        <TextureTransform scale="5 5"/>
+      </Appearance>
+ <Extrusion crossSection="0 0 0 10 20 10 20 0 0 0"
+convex="false" spine="0 0 0 0 0.5 0" creaseAngle="0" solid="false">
+</Extrusion>
+     </shape>
+ </anchor>
+</transform>
+ </transform>
+<transform translation="-35 40 0" rotation= '0 1 0 1.57'>
+      <shape>
+       <appearance>
+        <material diffuseColor="red"></material>
+       </appearance>
+       <text string="It is here" length="15">
+        <fontstyle family="SANS" size="2" justify="MIDDLE"></fontstyle>
+       </text>
+      </shape>
+     </transform>
+  
+<!--вращение стула -->
+  <Timesensor DEF='Timetoroll' cycleinterval='1' loop='true'></Timesensor>
+
+  <orientationinterpolator DEF='vra' key='0 0.5 1' keyvalue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></orientationinterpolator>
+
+<!--движение слендера-->
+<Timesensor DEF='Timetoroll1' cycleinterval='6' loop='true' ></Timesensor>
+  <PositionInterpolator DEF='dvij' key='0 0.2 0.4 0.6 0.8 1' keyValue='20 2.5 140 20 2.5 120 20 2.5 100 20 2.5 80 20 2.5 60 20 2.5 40 '></PositionInterpolator>
+
+<ROUTE fromNode='Timetoroll' fromField='fraction_changed' toNode='vra' toField='set_fraction'></ROUTE>
+ <ROUTE fromNode='vra' fromField='value_changed' toNode='chair' toField='set_rotation'></ROUTE>
+ <ROUTE fromNode='Timetoroll1' fromField='fraction_changed' toNode='dvij' toField='set_fraction'></ROUTE>
+ <ROUTE fromNode='dvij' fromField='value_changed' toNode='slender' toField='set_translation'></ROUTE>  
+ 
+ <Transform DEF="podsvet2" translation="-39 1 -40" rotation="0 0 1 -1.57" scale = "0.5 0.5 0.5" >
+ <Inline url='lump.x3d'>
+ </Transform>
+ <PointLight on='TRUE' intensity='150' color='yellow' location='-20 5 0 ' radius='200'></PointLight>
+  <Viewpoint description='eye' orientation='0 1 0 1.57 ' position='70 15 100'/>
+  <Navigationinfo avatarsize='1 15 1' headlight='false' type='walk' transitiontype='animate' visibilitylimit='20'speed='10'>
+  </Navigationinfo>
+  <PointLight location="10 10 10" color="1 1 1" intensity="0.1" shadowIntensity="0.8" shadowMapSize="512"></PointLight>
+      <SpotLight location="20 10 0" direction="-39 10 10" color="0 0 1" intensity="1" beamWidth="0.3" cutOffAngle="0.7"></SpotLight>
+	  <DirectionalLight id="directional" direction='0 0 1' on ="TRUE" intensity='1.0' shadowIntensity='0.5'> </DirectionalLight> 
+</Scene>
+
+</X3D>
+</body>
 </html>
