--- a/index.html
+++ b/index.html
@@ -13,9 +13,159 @@
 		<Scene>
 			<!-- Голова-->
 			<Transform>
-				<Inline url= "https://z0mb1eg0d.github.io/icg_labwork1/"></Inline>
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Cylinder size="1 2"></Cylinder>
+				</Shape>
 			</Transform>
 
+			<Transform translation="0 1 0">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Sphere size="2"></Sphere>
+				</Shape>
+			</Transform>
+
+			<Transform translation="0 2 0">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Cylinder height="1.7" radius="0.1"></Cylinder>
+				</Shape>
+			</Transform>
+
+			<Transform translation="0 2 0" rotation="1 0 0 1.570796">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Torus innerradius="0.1" outerradius="0.2"></Torus>
+				</Shape>
+			</Transform>
+
+			<Transform translation="0 2.8 0">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Sphere radius="0.2"></Sphere>
+				</Shape>
+			</Transform>
+
+			<Transform translation="0 0.5 1">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="gray"></Material>
+					</Appearance>
+					<Box size="1.3 0.7 0.5"></Box>
+				</Shape>
+				<Transform translation="-0.6 0 -0.2" rotation="1 0 0 1.570796">
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="gray"></Material>
+						</Appearance>
+						<Cylinder height="0.9" radius="0.35"></Cylinder>
+					</Shape>
+				</Transform>
+				<Transform translation="0.6 0 -0.2" rotation="1 0 0 1.570796">
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="gray"></Material>
+						</Appearance>
+						<Cylinder height="0.9" radius="0.35"></Cylinder>
+					</Shape>
+				</Transform>
+			</Transform>
+
+			<Transform translation="0 0.5 1">
+				<!-- глаза-->
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="black"></Material>
+					</Appearance>
+					<Box size="1.2 0.6 0.6"></Box>
+				</Shape>
+				<Transform translation="-0.6 0 -0.2" rotation="1 0 0 1.570796">
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="white"></Material>
+						</Appearance>
+						<Cylinder height="1.1" radius="0.3"></Cylinder>
+					</Shape>
+				</Transform>
+				<Transform translation="0.6 0 -0.2" rotation="1 0 0 1.570796">
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="white"></Material>
+						</Appearance>
+						<Cylinder height="1.1" radius="0.3"></Cylinder>
+					</Shape>
+				</Transform>
+
+				<Transform DEF="Left1" translation=" -0.6 0 0" rotation="0 1 0 1.570796">
+					<!-- левый зрачок-->
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="black"></Material>
+						</Appearance>
+						<Box size="0.8 0.2 0.2"></Box>
+					</Shape>
+				</Transform>
+
+				<Transform DEF="Right1" translation="0.6 0 0" rotation="0 1 0 1.570796">
+					<!-- правый зрачок-->
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="black"></Material>
+						</Appearance>
+						<Box size="0.8 0.2 0.2"></Box>
+					</Shape>
+				</Transform>
+
+
+
+
+			</Transform>
+
+			<Transform translation="0 -0.4 0.3">
+				<Shape>
+					<Appearance>
+						<ImageTexture url="https://pp.userapi.com/c851024/v851024772/cae48/N68WM_S__X0.jpg"></ImageTexture>
+
+					</Appearance>
+					<Cylinder height="0.6" radius="0.8"></Cylinder>
+				</Shape>
+			</Transform>
+			<Transform DEF="Siga1" translation=" 0.5 -0.45 0.5" rotation="1 0 0 1.570796">
+				<Shape>
+					<Appearance>
+						<Material diffusecolor="brown"> </Material>
+					</Appearance>
+					<Cylinder height="2" radius="0.2"></Cylinder>
+				</Shape>
+				<Transform translation="0 1.05 0">
+					<Shape>
+						<Appearance>
+							<Material diffusecolor="red"> </Material>
+						</Appearance>
+						<Cylinder height="0.1" radius="0.2"></Cylinder>
+					</Shape>
+				</Transform>
+			
+			<!-- огонек -->
+				<Transform translation="0 1.05 0" >
+				<Shape>
+					<Appearance>
+						<Material DEF="Sigara" diffusecolor="black" transparency="0"></Material>
+					</Appearance>
+					<Cylinder height="0.101" radius="0.201"></Cylinder>
+				</Transform>
+			</Transform>
 			<!-- Кольцо Дыма -->
 			<Transform DEF="Smoke" translation="0.5 -0.45 1.6" scale="0.5 0.5 0.5">
 				<Shape>
@@ -26,14 +176,7 @@
 				</Shape>
 			</Transform>
 
-			<!-- огонек -->
-			<Transform translation="0.5 -0.45 1.55" rotation=" 1 0 0 1.570796" >
-				<Shape>
-					<Appearance>
-						<Material DEF="Sigara" diffusecolor="black" transparency="0"></Material>
-					</Appearance>
-					<Cylinder height="0.101" radius="0.201"></Cylinder>
-			</Transform>
+			
 
 			<!-- Таймер -->
 			<timeSensor DEF="time" cycleInterval="3" loop="true" enabled="true"></timeSensor>
@@ -49,7 +192,19 @@
 			<ScalarInterpolator DEF="Fire" key="0 .5 .75 1" keyValue="0, 0.5, 0.8, 0"></ScalarInterpolator>
 			<ROUTE fromNode="time" fromField="fraction_changed" toNode="Fire" toField="set_fraction"></ROUTE>
 			<ROUTE fromNode="Fire" fromField="value_changed" toNode="Sigara" toField="transparency"></ROUTE>
-		</Scene>
+			<!--Правый глаз -->
+			<PositionInterpolator DEF="Right" key="0 0.35  0.7 1" keyValue="0.6 0 0, 0.7 0 0, 0.5 0 0, 0.6 0 0"></PositionInterpolator>
+			<ROUTE fromNode="time" fromField="fraction_changed" toNode="Right" toField="set_fraction"></ROUTE>
+			<ROUTE fromNode="Right" fromField="value_changed" toNode="Right1" toField="translation"></ROUTE>
+			<!--Левый глаз -->
+			<PositionInterpolator DEF="Left" key="0 0.35  0.7 1" keyValue="-0.6 0 0, -0.5 0 0, -0.7 0 0, -0.6 0 0"></PositionInterpolator>
+			<ROUTE fromNode="time" fromField="fraction_changed" toNode="Left" toField="set_fraction"></ROUTE>
+			<ROUTE fromNode="Left" fromField="value_changed" toNode="Left1" toField="translation"></ROUTE>
+			<!-- Сигара -->
+			<OrientationInterpolator DEF="Siga" key="0 0.35 0.7 1" keyValue="1 0 0 1.570796, 1 0 0 ‪1.408997‬, 1 0 0 ‪1.607129‬, 1 0 0 1.570796"></OrientationInterpolator>
+			<ROUTE fromNode="time" fromField="fraction_changed" toNode="Siga" toField="set_fraction"></ROUTE>
+			<ROUTE fromNode="Siga" fromField="value_changed" toNode="Siga1" toField="set_rotation"></ROUTE>
 	</X3D>
   </body> 
 </html>
+
