--- a/index.html
+++ b/index.html
@@ -8,6 +8,88 @@
     <script src="https://www.x3dom.org/download/x3dom.js"></script>
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
+     <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom" style="width:100%; height:100%">    
+    <Scene>
+
+<!--циферблат-->
+      <Transform rotation='1 0 0 -1.57'>
+        <Shape>
+          <Appearance>
+            <ImageTexture url="2.jpg"></ImageTexture>
+          </Appearance>
+          <Cylinder radius="10" height="1"></Cylinder>
+        </Shape>
+      </Transform>
+
+<!--сами часики-->
+      <Transform translation='0 0 0' > 
+        <Shape>
+          <Appearance>
+            <Material diffuseColor="slateblue"></Material>
+          </Appearance>
+          <Torus innerRadius="1" outerRadius="10"></Torus>
+        </Shape>
+      </Transform>
+
+<!--центр стрелочек-->
+      <Transform  rotation='1 0 0 -1.57' translation='0 0 0.5'>
+        <Shape>
+          <Appearance>
+        <Material diffuseColor="black"></Material>
+        </Appearance>
+           <Cylinder radius="1" height="1"></Cylinder>
+        </Shape>
+      </Transform>
+
+
+<Transform >
+
+<!--стрелка минут-->
+  <TimeSensor DEF='Time0'  cycleInterval='4' loop='true'></TimeSensor>
+<OrientationInterpolator DEF='OrInt' key='0 0.5 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
+
+    <Transform DEF='Tr0' translation='0 0 0.1'>
+      <Transform  translation="0 -3 0">
+        <Shape>
+          <Appearance>
+        <Material diffuseColor="cornflowerblue"></Material>
+        </Appearance>
+           <Box size="0.4 7.5 1"></Box> 
+        </Shape>
+      </Transform>
+    </Transform>
+
+<!--стрелка часов-->
+    <TimeSensor DEF='Time1'  cycleInterval='45' loop='true'></TimeSensor>
+<OrientationInterpolator DEF='OrIntt' key='0 0.5 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
+
+    <Transform DEF='Tr1' translation='0 0 0.01'>
+     <Transform  translation="0 -2 0">
+        <Shape>
+          <Appearance>
+        <Material diffuseColor="0.5 0.7 1"></Material>
+        </Appearance>
+           <Box size="0.5 4.5 1"></Box> 
+        </Shape>
+      </Transform>
+    </Transform>
+
+</Transform>
+
+<!--задняя стенка-->
+      <Transform rotation='1 0 0 -1.57' translation='0 0 -1'>
+        <Shape>
+          <Appearance>
+            <Material diffuseColor="slateblue"></Material>
+          </Appearance>
+          <Cylinder radius="10" height="0.1"></Cylinder>
+        </Shape>
+      </Transform>
+
+    <ROUTE fromNode='Time0' fromField='fraction_changed' toNode='OrInt' toField='set_fraction'></ROUTE>
+      <ROUTE fromNode='OrInt' fromField='value_changed' toNode='Tr0' toField='set_rotation'></ROUTE>
+
+     <ROUTE fromNode='Time1' fromField='fraction_changed' toNode='OrIntt' toField='set_fraction'></ROUTE>
+      <ROUTE fromNode='OrIntt' fromField='value_changed' toNode='Tr1' toField='set_rotation'></ROUTE>
   </body> 
 </html>
